# ultra-fast-altbot-15ms

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build-test.yml  latency-bench.yml
c_sbe_decoder/: decoder.c  decoder.h
github/workflows/: apply-patches.yml
src/: lib.rs  main.rs
src/config/: mod.rs
src/data_feed/: mod.rs
src/execution/: mock.rs  mod.rs
src/hotpath/: mod.rs
src/metrics/: mod.rs
src/sbe_decoder_ffi/: mod.rs
tests/: integration_tests.rs
